--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,25 @@
 ---
 # tasks file for wordpress
+- name: Check OS version
+  fail:
+    msg: "This task only supports RHEL 8 or 9. Target OS is {{ ansible_distribution }} {{ ansible_distribution_major_version }}"
+  when: >
+    not (
+        ansible_distribution in wordpress_support_rhel and 
+        (ansible_distribution_major_version | int) in [8 , 9] 
+    )
+
+- name: Import RHEL8 tasks.
+  ansible.builtin.include_tasks:
+    file: comb_rhel8.yml
+  when:
+    ansible_distribution in wordpress_support_rhel and 
+    ansible_distribution_major_version | int == 8
+
+- name: Import RHEL9 tasks.
+  ansible.builtin.include_tasks:
+    file: comb_rhel9.yml
+  when: 
+    ansible_distribution in wordpress_support_rhel and 
+    ansible_distribution_major_version | int == 9
+
